src/components/CaseCard/CaseCard.scss
@use "~/styles/helpers" as *;

.case-card {
  &__inner {
    background-color: var(--color-surface);
    border-radius: var(--border-radius-large);
    padding: rem(16) rem(16) 0 rem(16);
    margin-bottom: rem(12);

    @include mobile {
      border-radius: var(--border-radius);
      padding: rem(8) rem(8) 0 rem(8);
    }
  }

  &__address-bar {
    position: relative;
    display: flex;
    justify-content: center;
    padding: rem(6) rem(10);
    background-color: var(--color-surface-2);
    border-radius: var(--border-radius-small) var(--border-radius-small) 0 0;

    @include mobile {
      padding: rem(2) rem(6);
    }
  }

  &__traffic-lights {
    display: flex;
    column-gap: rem(4);
    align-items: center;
    position: absolute;
    top: 50%;
    left: rem(10);
    transform: translateY(-50%);

    @include mobile {
      left: rem(6);
    }
  }

  &__control {
    @include square(rem(6));

    border-radius: 50%;
    background-color: var(--color-surface-3);

    @include mobile {
      @include square(rem(4));
    }
  }

  &__active-tab {
    @include flex-center(true);

    padding-inline: rem(100);
    border-radius: var(--border-radius-x-small);
    background-color: var(--color-surface-3);
    font-size: rem(8);
    height: rem(14);

    @include hover {
      color: #0078d7;
    }

    @include mobile {
      padding-inline: rem(36);
      font-size: rem(6);
      height: rem(11);
    }
  }

  &__video {
    background-color: transparent;
    &::-webkit-media-controls-panel {
      display: none !important;
      -webkit-appearance: none;
      opacity: 0;
      visibility: hidden;
    }
    &::-webkit-media-controls-play-button {
      display: none !important;
      -webkit-appearance: none;
      opacity: 0;
      visibility: hidden;
    }
    &::-webkit-media-controls-start-playback-button {
      display: none !important;
      -webkit-appearance: none;
      opacity: 0;
      visibility: hidden;
    }
  }

  &__description {
    max-width: rem(400);
  }
}

